Update FireTasks : Fire Laser & Collision

--- a/wpfapp1/wpfapp1.csproj
+++ b/wpfapp1/wpfapp1.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="Images\bird.GIF" />
+    <None Remove="Images\laser.png" />
     <None Remove="Images\si1_1.png" />
     <None Remove="Images\si1_2.png" />
     <None Remove="Images\Space-Invaders-Ship.png" />
@@ -27,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\laser.png" />
     <Resource Include="Images\si1_1.png" />
     <Resource Include="Images\si1_2.png" />
     <Resource Include="Images\Space-Invaders-Ship.png" />
